[gd_scene load_steps=8 format=3 uid="uid://vedn637j6ike"]

[ext_resource type="Script" path="res://scripts/platform_breakable.gd" id="1_8jjtd"]
[ext_resource type="Texture2D" uid="uid://d2tspl5v1b5kq" path="res://assets/platform-break.png" id="2_2aowh"]

[sub_resource type="PhysicsMaterial" id="PhysicsMaterial_m4kbw"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_kyfv7"]
size = Vector2(48, 15.25)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_owwv0"]
size = Vector2(48, 3.5)

[sub_resource type="Curve" id="Curve_sflfj"]
_data = [Vector2(0.0725191, 1), 0.0, 0.0, 0, 0, Vector2(0.980916, 0.366038), 0.0, 0.0, 0, 0]
point_count = 2

[sub_resource type="Curve" id="Curve_v5egl"]
_data = [Vector2(0.103053, 0.864151), 0.0, 0.0, 0, 0, Vector2(0.98855, 0.290566), 0.0, 0.0, 0, 0]
point_count = 2

[node name="PlatformBreakable" type="AnimatableBody2D"]
collision_layer = 2
collision_mask = 2
physics_material_override = SubResource("PhysicsMaterial_m4kbw")
script = ExtResource("1_8jjtd")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(17, 8)
texture = ExtResource("2_2aowh")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(17, 7.375)
shape = SubResource("RectangleShape2D_kyfv7")

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(17, -1.75)
shape = SubResource("RectangleShape2D_owwv0")

[node name="Timer" type="Timer" parent="."]
one_shot = true

[node name="particles_dust" type="CPUParticles2D" parent="."]
position = Vector2(18, 1)
emitting = false
amount = 20
lifetime = 0.5
emission_shape = 3
emission_rect_extents = Vector2(18, 1)
scale_amount_max = 2.0
scale_amount_curve = SubResource("Curve_sflfj")
color = Color(0.255924, 0.278793, 0.381066, 1)

[node name="particles_explosion" type="CPUParticles2D" parent="."]
position = Vector2(17, 1)
emitting = false
amount = 80
lifetime = 1.3
one_shot = true
speed_scale = 2.17
explosiveness = 1.0
randomness = 0.36
emission_shape = 2
emission_sphere_radius = 7.32
direction = Vector2(0, 0)
spread = 180.0
gravity = Vector2(9.893, 100)
initial_velocity_max = 40.54
scale_amount_min = 2.0
scale_amount_max = 4.0
scale_amount_curve = SubResource("Curve_v5egl")
color = Color(0.26954, 0.293287, 0.399353, 1)

[node name="timer_redraw" type="Timer" parent="."]
process_callback = 0
wait_time = 2.0
one_shot = true

[connection signal="body_shape_entered" from="Area2D" to="." method="_on_area_2d_body_shape_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="timeout" from="timer_redraw" to="." method="_on_timer_redraw_timeout"]
